tests/models/enum/named/isize/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        isize
    ),
}
fn main() {}
